--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>현대자동차</title>
     <!-- 순서지키기 -->
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/jquery.fullpage.min.css">
     <link rel="stylesheet" href="./css/slick.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel='icon' type='images/png' href='./img/top-logo.png'>
     <script src="./js/jquery-1.12.4.min.js"></script>
     <script src="./js/jquery.fullpage.min.js"></script>
     <script src="./js/slick.min.js"></script>
@@ -137,6 +138,7 @@
                 </section>
                 <!-- mainProduct} -->
 
+                <!-- {mainIntroduce-->
                 <section class="mainIntroduce section">
                     <div class="main_introduce">
                         <div class="inner">
@@ -167,6 +169,70 @@
                         </div>
                     </div>
                 </section>
+                <!-- mainIntroduce} -->
+
+                <!-- {mainApp -->
+                <section class="mainApp section">
+                    <div class="main_app">
+                        <div class="inner">
+                            <div class="intro">
+                                <span>myHyundai</span>
+                                <p>이제, 단순히 APP을 넘어서 당신의 카라이프를 책임질<br />
+                                    ‘라이프 플랫폼 myHyundai’ 를 만나보세요.</p>
+                            </div>
+
+
+                            <div class="apps">
+                                <div class="app_slide">
+                                    <figure class="itm01">
+                                        <div class="slide_inner">
+                                            <span>홈</span>
+                                            <p>보유 차량 정보에 따른 맞춤 정보형 UI 통해 제공</p>
+                                            <a href="">자세히 보기 ></a>
+                                        </div>
+                                    </figure>
+                                    <figure class="itm02">
+                                        <div class="slide_inner">
+                                            <span>차고</span>
+                                            <p>차량정보 및 유지비 관리를 포함한 쉬운 차량 관리</p>
+                                            <a href="">자세히 보기 ></a>
+                                        </div>
+                                    </figure>
+                                    <figure class="itm03">
+                                        <div class="slide_inner">
+                                            <span>Shop</span>
+                                            <p>마이현대 대표 커머스 현대Shop과의 연계</p>
+                                            <a href="">자세히 보기 ></a>
+                                        </div>
+                                    </figure>
+                                    <figure class="itm04">
+                                        <div class="slide_inner">
+                                            <span>서비스</span>
+                                            <p>정비를 포함한 다양한 차량 관련 서비스</p>
+                                            <a href="">자세히 보기 ></a>
+                                        </div>
+                                    </figure>
+                                </div>
+
+
+                                <div class="app_desc">
+                                    <div class="desc_inner">
+                                        <span>마이현대 APP</span>
+                                        <p>당신의 카라이프를 책임질<br />
+                                            현대자동차 대표 앱 myHyundai를<br />
+                                            만나보세요.</p>
+                                        <a href="">APP 다운로드 ></a>
+                                        <figure>
+                                            <img src="./img/app.png" alt="">
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- mainApp} -->
+
             </div>
         </main>
         <!-- main} -->
