--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>현대자동차</title>
-    <!-- 순서지키기 -->
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/jquery.fullpage.min.css">
     <link rel="stylesheet" href="./css/slick.css">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel='icon' type='images/png' href='./img/top-logo.png'>
+    <link rel="icon" href="./favicon.ico">
     <script src="./js/jquery-1.12.4.min.js"></script>
     <script src="./js/jquery.fullpage.min.js"></script>
     <script src="./js/slick.min.js"></script>
@@ -20,11 +19,6 @@
 
 <body>
     <div class="Wrap">
-        <!-- {topBanner -->
-        <div class="topBanner">
-        </div>
-        <!-- topBanner} -->
-
         <!-- {header -->
         <header class="header">
             <!-- {inner -->
@@ -35,12 +29,107 @@
                 <!-- {gnb -->
                 <nav class="gnb">
                     <ul>
-                        <li><a href="">모델</a></li>
-                        <li><a href="">구매/이벤트</a></li>
-                        <li><a href="">서비스/멤버십</a></li>
-                        <li><a href="">디지털/고객지원</a></li>
-                        <li><a href="">브랜드</a></li>
-                        <li><a href="">Shop</a></li>
+                        <li>
+                            <a href="">모델</a>
+                            <div class="lnb">
+                                <div class="lnb_inner">
+                                    <div class="top">
+                                        <div class="left">
+                                            <ul>
+                                                <li><a href="">승용</a></li>
+                                                <li><a href="">SUV</a></li>
+                                                <li><a href="">MPV</a></li>
+                                                <li><a href="">수소/전기차</a></li>
+                                                <li><a href="">N/N Line</a></li>
+                                                <li><a href="">소형상용&택시</a></li>
+                                                <li><a href="">트럭&버스</a></li>
+                                                <li><a href="">GENESIS</a></li>
+                                                <li><a href="">CASPER</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="right">
+                                            <ul>
+                                                <li>
+                                                    <a href="">
+                                                        <img src="./img/top_car01.png" alt="">
+                                                        <span>디 올 뉴 그랜저</span>
+                                                        <p>3,716만원~</p>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="">
+                                                        <img src="./img/top_car02.png" alt="">
+                                                        <span>디 올 뉴 그랜저</span>
+                                                        <p>3,716만원~</p>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="">
+                                                        <img src="./img/top_car03.png" alt="">
+                                                        <span>디 올 뉴 그랜저</span>
+                                                        <p>3,716만원~</p>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="">
+                                                        <img src="./img/top_car04.png" alt="">
+                                                        <span>디 올 뉴 그랜저</span>
+                                                        <p>3,716만원~</p>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="">
+                                                        <img src="./img/top_car05.png" alt="">
+                                                        <span>디 올 뉴 그랜저</span>
+                                                        <p>3,716만원~</p>
+                                                    </a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+
+                                    <div class="bottom">
+                                        <div class="itm">
+                                            <figure>
+                                                <img src="./img/top_ad01.jpg" alt="">
+                                            </figure>
+                                            <div class="info">
+                                                <span>12월 캐스퍼 고객 감사 이벤트</span>
+                                                <p>2022.12.01 ~ 2022.12.31</p>
+                                            </div>
+
+                                        </div>
+                                        <div class="itm">
+                                            <figure>
+                                                <img src="./img/top_ad02.jpg" alt="">
+                                            </figure>
+                                            <div class="info">
+                                                <span>12월 신차 구매 혜택</span>
+                                                <p>2022.12.01 ~ 2022.12.31</p>
+                                            </div>
+
+                                        </div>
+                                        <div class="itm">
+                                            <figure>
+                                                <img src="./img/top_ad03.jpg" alt="">
+                                            </figure>
+                                            <div class="info">
+                                                <span>송파대로 전시장 크리스마스<br />
+                                                    이벤트</span>
+                                                <p>2022.12.01 ~ 2022.12.31</p>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </li>
+                        <li class="list"><a href="">구매/이벤트</a></li>
+                        <li class="list"><a href="">서비스/멤버십</a></li>
+                        <li class="list"><a href="">디지털/고객지원</a></li>
+                        <li class="list"><a href="">브랜드</a></li>
+                        <li class="list"><a href="">Shop</a></li>
                     </ul>
                 </nav>
                 <div class="plus">
@@ -54,10 +143,10 @@
         </header>
         <!-- {header -->
 
-
         <!-- {main -->
         <main>
             <div class="main">
+
                 <!-- {mainVisual -->
                 <section class="mainVisual section">
                     <!-- {mainSlide -->
@@ -67,6 +156,12 @@
                                 <span>The all-new GRANDEUR</span>
                                 <p>Outclass GRANDEUR</p>
                                 <img src="./img/car01.png" alt="">
+                                <div class=right>
+                                    VENUE
+                                </div>
+                                <div class="left">
+                                    CASPER
+                                </div>
                             </div>
                         </figure>
                         <figure class="itm02">
@@ -74,6 +169,12 @@
                                 <span>VENUE</span>
                                 <p>혼라이프를 즐기다</p>
                                 <img src="./img/car02.png" alt="">
+                                <div class="right">
+                                    IONIQ 6
+                                </div>
+                                <div class="left">
+                                    GRANDEUR
+                                </div>
                             </div>
                         </figure>
                         <figure class="itm03">
@@ -81,6 +182,12 @@
                                 <span>IONIQ 6</span>
                                 <p>내가 만드는 세상</p>
                                 <img src="./img/car03.png" alt="">
+                                <div class="right">
+                                    CASPER
+                                </div>
+                                <div class="left">
+                                    VENUE
+                                </div>
                             </div>
                         </figure>
                         <figure class="itm04">
@@ -88,6 +195,12 @@
                                 <span>CASPER</span>
                                 <p>case by CASPER</p>
                                 <img src="./img/car04.png" alt="">
+                                <div class="right">
+                                    GRANDEUR
+                                </div>
+                                <div class="left">
+                                    IONIQ 6
+                                </div>
                             </div>
                         </figure>
                     </div>
@@ -95,7 +208,7 @@
                 </section>
                 <!-- mainVisual} -->
 
-                <!-- mainProduct} -->
+                <!-- {mainProduct -->
                 <section class="mainProduct section">
                     <div class="main_product">
                         <div class="inner">
@@ -139,7 +252,7 @@
                 <!-- mainProduct} -->
 
                 <!-- {mainIntroduce-->
-                <section class="mainIntroduce section">
+                <section class="mainIntroduce section ">
                     <div class="main_introduce">
                         <div class="inner">
                             <div class="intro">
@@ -233,15 +346,130 @@
                 </section>
                 <!-- mainApp} -->
 
+                <!-- {mainAd -->
+                <section class="mainAd section fp-auto-height">
+                    <div class="main_ad">
+                        <div class="inner">
+                            <span>현대자동차 소식</span>
+                            <div class="insta">
+                                <figure>
+                                    <img src="./img/insta01.jpg" alt="">
+                                    <a href="">
+                                        <div class="box">
+                                            <p>자세히보기 +</p>
+                                        </div>
+                                    </a>
+                                </figure>
+                                <figure>
+                                    <img src="./img/insta02.jpg" alt="">
+                                    <a href="">
+                                        <div class="box">
+                                            <p>자세히보기 +</p>
+                                        </div>
+                                    </a>
+                                </figure>
+                                <figure>
+                                    <img src="./img/insta03.jpg" alt="">
+                                    <a href="">
+                                        <div class="box">
+                                            <p>자세히보기 +</p>
+                                        </div>
+                                    </a>
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- {footer -->
+                    <footer class="footer">
+                        <div class="inner">
+                            <div class="top">
+                                <div class="f_logo">
+                                    <figure>
+                                        <img src="./img/logo_footer.png" alt="">
+                                    </figure>
+                                </div>
+                                <div class="f_list">
+                                    <ul>
+                                        <li>모바일 App</li>
+                                        <li>저작권안내</li>
+                                        <li>개인정보 처리방침</li>
+                                        <li>이용약관</li>
+                                        <li>프라이버시 센터</li>
+                                    </ul>
+                                    <ul>
+                                        <li>윤리경영 사이버 감사실</li>
+                                        <li>영상정보처리기기 운영관리방침</li>
+                                        <li>사이트맵</li>
+                                    </ul>
+                                    <ul>
+                                        <li>&copy; HYUNDAI MOTOR COMPANY. ALL RIGHTS RESERVED.</li>
+                                    </ul>
+                                </div>
+                                <div class="f_right">
+                                    <div class="sns">
+                                        <i class="xi-instagram"></i>
+                                        <i class="xi-facebook"></i>
+                                        <i class="xi-youtube-play"></i>
+                                    </div>
+                                    <div class="link">
+                                        <form action="">
+                                            <select id="f_link">
+                                                <option value="">Family Link</option>
+                                                <option value="http://naver.com">Naver</option>
+                                                <option value="http://daum.net">Daum</option>
+                                                <option value="http://google.com">Google</option>
+                                            </select>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="bottom">
+                                <div class="itm01">
+                                    <figure>
+                                        <img src="./img/footer01.png" alt="">
+                                        웹 접근성 품질인증
+                                    </figure>
+                                </div>
+                                <div class="itm02">
+                                    <figure>
+                                        <img src="./img/footer02.png" alt="">
+                                        우수디자인 지식경제부선정
+                                    </figure>
+                                </div>
+                                <div class="itm03">
+                                    <figure>
+                                        <img src="./img/footer03.png" alt="">
+                                        가족친화 우수기관
+                                    </figure>
+                                </div>
+                                <div class="itm04">
+                                    <figure>
+                                        <img src="./img/footer04.png" alt="">
+                                        2022년 한국서비스품질지수 (KS-<br />
+                                        SQI) 자동차 A/S 부문 8년 연속 1위
+                                    </figure>
+                                </div>
+                                <div class="itm05">
+                                    <figure>
+                                        <img src="./img/footer01.png" alt="">
+                                        2022년 한국품질만족지수 (KS-<br />
+                                        QEI) 조사 12개 부문 1위
+                                    </figure>
+                                </div>
+                            </div>
+                        </div>
+                    </footer>
+                    <!-- footer} -->
+                </section>
+                <!-- mainAd} -->
+
             </div>
+
         </main>
         <!-- main} -->
 
-        <!-- {footer -->
-        <footer class="footer">
-
-        </footer>
-        <!-- footer} -->
     </div>
 </body>
 
