--- a/index.html
+++ b/index.html
@@ -447,15 +447,13 @@
                                 <div class="itm04">
                                     <figure>
                                         <img src="./img/footer04.png" alt="">
-                                        2022년 한국서비스품질지수 (KS-<br />
-                                        SQI) 자동차 A/S 부문 8년 연속 1위
+                                        2022년 한국서비스품질지수
                                     </figure>
                                 </div>
                                 <div class="itm05">
                                     <figure>
                                         <img src="./img/footer01.png" alt="">
-                                        2022년 한국품질만족지수 (KS-<br />
-                                        QEI) 조사 12개 부문 1위
+                                        2022년 한국품질만족지수
                                     </figure>
                                 </div>
                             </div>
